--- a/package.json
+++ b/package.json
@@ -13,15 +13,38 @@
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.5",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@tiptap/core": "^2.6.3",
+    "@tiptap/extension-code-block-lowlight": "^2.6.3",
+    "@tiptap/extension-color": "^2.6.3",
+    "@tiptap/extension-heading": "^2.6.3",
+    "@tiptap/extension-horizontal-rule": "^2.6.3",
+    "@tiptap/extension-image": "^2.6.3",
+    "@tiptap/extension-link": "^2.6.3",
+    "@tiptap/extension-placeholder": "^2.6.3",
+    "@tiptap/extension-task-item": "^2.6.3",
+    "@tiptap/extension-task-list": "^2.6.3",
+    "@tiptap/extension-text-style": "^2.6.3",
+    "@tiptap/extension-typography": "^2.6.3",
+    "@tiptap/pm": "^2.6.3",
+    "@tiptap/react": "^2.6.3",
+    "@tiptap/starter-kit": "^2.6.3",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.12",
     "firebase": "^10.12.5",
+    "lowlight": "^3.1.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
